--- a/Notebook.ipynb
+++ b/Notebook.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Fine dust prediction (하루 평균 미세 먼지 수치 예측)\n",
+    "Training convolutional recurrent network to predict fine-dust.\n",
+    "\n",
+    "pm10 단위의 하루 평균 미세 먼지 수치를 예측하기 위해 CRNN 을 훈련시킵니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -39,6 +49,24 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Pre-processing data\n",
+    "Pre-processing the daily average amount of the fine dust(pm10) bundled in 7 days.\n",
+    "\n",
+    "For the convolution layer, the amount of fine dust per day for each region is mapped to the geographical map of Seoul. \n",
+    "\n",
+    "The data was extracted from the csv file [Seoul Daily Average Air Pollution Degree Information](http://data.seoul.go.kr/openinf/sheetview.jsp?infId=OA-2218&tMenu=11) provided by the Seoul Open Data Plaza.\n",
+    "\n",
+    "하루 평균 미세 먼지 수치를 7일 단위로 전처리 합니다.\n",
+    "\n",
+    "컨볼루션 레이어를 위해, 지역별 미세 먼지 수치는 실제 서울시 지도에 대응됩니다. (seoul_map)\n",
+    "\n",
+    "데이터는 서울 열린 데이터 광장에서 제공하는 [서울시 일별 평균 대기 오염도 정보](http://data.seoul.go.kr/openinf/sheetview.jsp?infId=OA-2218&tMenu=11) csv 파일에서 추출하였습니다. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
@@ -74,11 +102,23 @@
    "outputs": [],
    "source": [
     "def read_csv(name):\n",
+    "    \"\"\"Read the csv file and return the amount of fine dust for each region grouped by date.\n",
+    "    \n",
+    "    Args:\n",
+    "        name: The name of the csv file to read.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Dictionary object mapping the amount of fine dust per zone by date.\n",
+    "    \n",
+    "    Raises:\n",
+    "        ValueError: If the number of data per day in the csv file is not equal to LOCATION_CNT.\n",
+    "        \n",
+    "    \"\"\"\n",
     "    with open(name) as f:\n",
     "        raw_data = f.read().strip()\n",
     "\n",
     "    del_quote = raw_data.replace(\"\\\"\", '')\n",
-    "    data = list(map(lambda x: x.split(','), del_quote.split('\\n')))[1:] # csv header\n",
+    "    data = list(map(lambda x: x.split(','), del_quote.split('\\n')))[1:] # [1:] csv header\n",
     "\n",
     "    splitted = []\n",
     "\n",
@@ -116,6 +156,16 @@
    "outputs": [],
    "source": [
     "def geographical_mapping(pms_data):\n",
+    "    \"\"\"Map the dict of the amount of fine dust for each region to geographical map of Seoul.\n",
+    "    \n",
+    "    Args:\n",
+    "        pms_data: Fine dust data pre-processed by read_csv.\n",
+    "            Dictionary obejct mapping the amount of fine dust per area by date.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Dictionary object that map the amount of fine dust to the real region of Seoul.\n",
+    "      \n",
+    "    \"\"\"\n",
     "    def dict2seoul(p):\n",
     "        return list(map(lambda t: list(map(lambda x: int(p[x]) if x != 0 else 0, t)), seoul_map))\n",
     "\n",
@@ -135,6 +185,17 @@
    "outputs": [],
    "source": [
     "def generate_dataset(data):\n",
+    "    \"\"\" Generate the daily average amount of the fine dust(pm10) bundled in 7 days.\n",
+    "    \n",
+    "    Args:\n",
+    "        data: Fine dust data pre-processed by read_csv\n",
+    "            Dictionary object mapping the amount of fine dust per area by date.\n",
+    "    \n",
+    "    Returns:\n",
+    "        pms_sampled: the amount of fine dust bundled in 7 days.\n",
+    "        pms_result: the amount of fine dust on the next day.\n",
+    "        \n",
+    "    \"\"\"\n",
     "    pms_mapped = geographical_mapping(data)\n",
     "    \n",
     "    # tie data to WEEKLY_BATCH(7) batches\n",
@@ -187,6 +248,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Generate Model\n",
+    "Generate convolutional recurrent networks to predict fine-dust.\n",
+    "\n",
+    "Convolution each layer separately with 3x3 sized, 1x16, 16x32, 32x64 filter.\n",
+    "\n",
+    "Flatten each layer and pass it to the recurrent unit, 2048 hidden units.\n",
+    "\n",
+    "Calculate estimate via three fully connected layer (2048, 512, 25).\n",
+    "\n",
+    "Optimize it with square mean error, RMSPropOptimizer."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<img src=\"https://github.com/revsic/Fine-Dust-Prediction/raw/master/network_model.png\" width=\"60%\" align=\"left\">"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 9,
    "metadata": {
@@ -195,9 +279,28 @@
    "outputs": [],
    "source": [
     "def lrelu(layer):\n",
+    "    \"\"\"Implementation of leaky relu, leak 0.2.\n",
+    "    \n",
+    "    Args:\n",
+    "        layer: tensor which lrelu is applied.\n",
+    "        \n",
+    "    Returns:\n",
+    "        Tensor which lrelu is applied.\n",
+    "    \n",
+    "    \"\"\"\n",
     "    return tf.maximum(0.2*layer, layer)\n",
     "\n",
+    "\n",
     "def batch_norm(x, name='batch_norm'):\n",
+    "    \"\"\"Alias of tf.contrib.layers.batch_norm.\n",
+    "    \n",
+    "    Args:\n",
+    "        x: tensor which batch normalization is applied.\n",
+    "        \n",
+    "    Returns:\n",
+    "        Tensor which batch normalization is applied.\n",
+    "    \n",
+    "    \"\"\"\n",
     "    return tf.contrib.layers.batch_norm(x,\n",
     "                                        decay=0.9, \n",
     "                                        updates_collections=None,\n",
@@ -217,7 +320,7 @@
    },
    "outputs": [],
    "source": [
-    "X = tf.placeholder(tf.float32, [None, WEEKLY_BATCH, 9, 8]) # metrix size [9, 8]\n",
+    "X = tf.placeholder(tf.float32, [None, WEEKLY_BATCH, 9, 8]) # matrix size [9, 8]\n",
     "Y = tf.placeholder(tf.float32, [None, BOROUGH_CNT])\n",
     "\n",
     "Xt = tf.transpose(X, [1, 0, 2, 3])"
@@ -236,6 +339,20 @@
     "reused = False\n",
     "\n",
     "def layer2conv(layer):\n",
+    "    \"\"\"Convolution and flatten layer with 3x3 sized 1x16, 16x32, 32x64 conv2d filter.\n",
+    "    \n",
+    "    To use the same filter but convolute the layers seperately, `layer2conv` use variable_scope.\n",
+    "    It use `reused` as False only one time, then set True after all.\n",
+    "    The same filter will applied to all layer, but we can convolute it seperately.\n",
+    "    \n",
+    "    Args:\n",
+    "        layer: Tensor shaped [-1, 9, 8] which Conv2D is applied.\n",
+    "    \n",
+    "    Returns:\n",
+    "        Tensor shaped [-1, 9*8*64] which convolution filter[1x16, 16x32, 32x64] is applied.\n",
+    "    \n",
+    "    \"\"\"\n",
+    "    \n",
     "    global reused\n",
     "    \n",
     "    with tf.variable_scope('conv_layer', reuse=reused):\n",
@@ -316,6 +433,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Training\n",
+    "\n",
+    "Train CRNN Networks with batch size 40, train iter 200.\n",
+    "\n",
+    "Record training and cross validation errors during training.\n",
+    "\n",
+    "RCNN 네트워크를 학습시킵니다. batch 크기는 40개, 반복 횟수는 200번입니다.\n",
+    "\n",
+    "훈련 과정에서 training error 와 cross validation error 을 계산, 기록합니다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
@@ -376,6 +508,17 @@
     "    \n",
     "    if i % (TRAIN_ITER // 10) == 0:\n",
     "        print(i/TRAIN_ITER, cvloss)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Visualization\n",
+    "\n",
+    "Visualize loss graph and actual value and estimates for the test set.\n",
+    "\n",
+    "loss graph 와 test set 에 대한 실제 값과 평가치를 시각화합니다."
    ]
   },
   {
@@ -464,6 +607,21 @@
    "source": [
     "sess.close()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Conclusion\n",
+    "\n",
+    "Unfortunately, learning did not work out better than I thought.\n",
+    "\n",
+    "In addition to the fine-dust, the accuracy can be improved by adding wind direction or date information.\n",
+    "\n",
+    "안타깝게도, 학습이 생각보다 잘 이루어지지 않았습니다.\n",
+    "\n",
+    "하루 평균 미세 먼지 양 이외에도 풍향이나 날짜 정보를 추가하여 정확도를 높일 수 있을 것으로 보입니다."
+   ]
   }
  ],
  "metadata": {
@@ -482,7 +640,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
