--- a/Fine-dust-prediction.ipynb
+++ b/Fine-dust-prediction.ipynb
@@ -53,15 +53,15 @@
    "metadata": {},
    "source": [
     "## Pre-processing data\n",
-    "Pre-processing the daily average amount of the fine dust(pm10) bundled in 7 days.\n",
+    "Pre-processing the daily average amount of the fine dust(pm10) to bundle it in 7 days.\n",
     "\n",
-    "For the convolution layer, the amount of fine dust per day for each region is mapped to the geographical map of Seoul. \n",
+    "For the convolution layer, the amount of fine dust for each region is mapped to the geographical map of Seoul. \n",
     "\n",
     "The data was extracted from the csv file [Seoul Daily Average Air Pollution Degree Information](http://data.seoul.go.kr/openinf/sheetview.jsp?infId=OA-2218&tMenu=11) provided by the Seoul Open Data Plaza.\n",
     "\n",
     "하루 평균 미세 먼지 수치를 7일 단위로 전처리 합니다.\n",
     "\n",
-    "컨볼루션 레이어를 위해, 지역별 미세 먼지 수치는 실제 서울시 지도에 대응됩니다. (seoul_map)\n",
+    "convolution layer를 위해, 지역별 미세 먼지 수치는 실제 서울시 지도에 대응됩니다. (seoul_map)\n",
     "\n",
     "데이터는 서울 열린 데이터 광장에서 제공하는 [서울시 일별 평균 대기 오염도 정보](http://data.seoul.go.kr/openinf/sheetview.jsp?infId=OA-2218&tMenu=11) csv 파일에서 추출하였습니다. "
    ]
@@ -109,6 +109,7 @@
     "    \n",
     "    Returns:\n",
     "        Dictionary object mapping the amount of fine dust per zone by date.\n",
+    "        {'20170506': {'강남구': 50, '강동구': 60, '강서구':70}, '20170507': {'강남구': } ...}\n",
     "    \n",
     "    Raises:\n",
     "        ValueError: If the number of data per day in the csv file is not equal to LOCATION_CNT.\n",
@@ -135,7 +136,7 @@
     "                raise ValueError(date + ' is not same as ' + 'local[0]')\n",
     "    \n",
     "    def filter_borough(dic):\n",
-    "        return dict(filter(lambda t: '구' in t[0], dic.items())) # filter not road name only borough \n",
+    "        return dict(filter(lambda t: '구' in t[0], dic.items())) #filter not road name only borough \n",
     "\n",
     "    # index 0:date, 1:local name, 6:pms\n",
     "    pms = dict(map(lambda x: (x[0][0], dict(map(lambda t: (t[1], t[6]), x))), splitted))\n",
@@ -156,14 +157,16 @@
    "outputs": [],
    "source": [
     "def geographical_mapping(pms_data):\n",
-    "    \"\"\"Map the dict of the amount of fine dust for each region to geographical map of Seoul.\n",
+    "    \"\"\"Map the amount of fine dust for each region to geographical map of Seoul.\n",
     "    \n",
     "    Args:\n",
     "        pms_data: Fine dust data pre-processed by read_csv.\n",
     "            Dictionary obejct mapping the amount of fine dust per area by date.\n",
+    "            {'20170506': {'강남구': 50, '강동구': 60, '강서구':70}, '20170507': {'강남구': } ...}\n",
     "    \n",
     "    Returns:\n",
-    "        Dictionary object that map the amount of fine dust to the real region of Seoul.\n",
+    "        dict that map the amount of fine dust to the geographical map of Seoul.\n",
+    "        {'20170506': [[0, 0, 0, 0, 50, 60, 0, 0], [0, 0, 0, 40, ...]]}\n",
     "      \n",
     "    \"\"\"\n",
     "    def dict2seoul(p):\n",
@@ -190,6 +193,7 @@
     "    Args:\n",
     "        data: Fine dust data pre-processed by read_csv\n",
     "            Dictionary object mapping the amount of fine dust per area by date.\n",
+    "            {'20170506': {'강남구': 50, '강동구': 60, '강서구':70}, '20170507': {'강남구': } ...}\n",
     "    \n",
     "    Returns:\n",
     "        pms_sampled: the amount of fine dust bundled in 7 days.\n",
@@ -258,7 +262,7 @@
     "\n",
     "Flatten each layer and pass it to the recurrent unit, 2048 hidden units.\n",
     "\n",
-    "Calculate estimate via three fully connected layer (2048, 512, 25).\n",
+    "Calculate estimates via three fully connected layer (2048, 512, 25).\n",
     "\n",
     "Optimize it with square mean error, RMSPropOptimizer."
    ]
@@ -282,7 +286,7 @@
     "    \"\"\"Implementation of leaky relu, leak 0.2.\n",
     "    \n",
     "    Args:\n",
-    "        layer: tensor which lrelu is applied.\n",
+    "        layer: tensor which lrelu will be applied.\n",
     "        \n",
     "    Returns:\n",
     "        Tensor which lrelu is applied.\n",
@@ -295,7 +299,7 @@
     "    \"\"\"Alias of tf.contrib.layers.batch_norm.\n",
     "    \n",
     "    Args:\n",
-    "        x: tensor which batch normalization is applied.\n",
+    "        x: tensor which batch normalization will be applied.\n",
     "        \n",
     "    Returns:\n",
     "        Tensor which batch normalization is applied.\n",
@@ -346,7 +350,7 @@
     "    The same filter will applied to all layer, but we can convolute it seperately.\n",
     "    \n",
     "    Args:\n",
-    "        layer: Tensor shaped [-1, 9, 8] which Conv2D is applied.\n",
+    "        layer: Tensor shaped [-1, 9, 8] which Conv2D will be applied.\n",
     "    \n",
     "    Returns:\n",
     "        Tensor shaped [-1, 9*8*64] which convolution filter[1x16, 16x32, 32x64] is applied.\n",
@@ -442,7 +446,7 @@
     "\n",
     "Record training and cross validation errors during training.\n",
     "\n",
-    "RCNN 네트워크를 학습시킵니다. batch 크기는 40개, 반복 횟수는 200번입니다.\n",
+    "CRNN 네트워크를 학습시킵니다. batch 크기는 40개, 반복 횟수는 200번입니다.\n",
     "\n",
     "훈련 과정에서 training error 와 cross validation error 을 계산, 기록합니다."
    ]
