--- a/Fine-Dust-Prediction.ipynb
+++ b/Fine-Dust-Prediction.ipynb
@@ -373,11 +373,12 @@
    },
    "outputs": [],
    "source": [
+    "# 1x1 convolution for flattening data\n",
     "Wf = tf.get_variable('wf', shape=[1, 1, 32, 1],\n",
     "                    initializer=tf.random_normal_initializer(stddev=0.02))\n",
-    "out = tf.nn.conv2d(hidden, Wf, strides=[1, 1, 1, 1], padding='SAME') # 1x1 convolution for flattening data\n",
-    "pred = tf.reshape(out, [-1, 9, 8])\n",
+    "out = tf.nn.conv2d(hidden, Wf, strides=[1, 1, 1, 1], padding='SAME') \n",
     "\n",
+    "pred = tf.reshape(out, [-1, 9, 8])\n",
     "\n",
     "loss = tf.reduce_mean(tf.square(Y - pred)) # MSE loss\n",
     "opt = tf.train.AdamOptimizer(0.01).minimize(loss)"
@@ -451,8 +452,8 @@
     "    ptr = 0\n",
     "    for _ in range(BATCH_ITER):\n",
     "        _, trainloss = sess.run([opt, loss], feed_dict={X: train_sampled[ptr:ptr+BATCH_SIZE], \n",
-    "                                                       Y: train_result[ptr:ptr+BATCH_SIZE],\n",
-    "                                                       batch_size: BATCH_SIZE})\n",
+    "                                                        Y: train_result[ptr:ptr+BATCH_SIZE],\n",
+    "                                                        batch_size: BATCH_SIZE})\n",
     "        \n",
     "        cvloss = sess.run(loss, feed_dict={X: cv_sampled, Y: cv_result, batch_size: CV_SIZE})\n",
     "        \n",
@@ -622,7 +623,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
