Add more comments of the ConvLSTM

--- a/Fine-Dust-Prediction.ipynb
+++ b/Fine-Dust-Prediction.ipynb
@@ -343,7 +343,15 @@
     "        return tf.nn.conv2d(x, w, strides=[1, 1, 1, 1], padding='SAME')\n",
     "    \n",
     "    def __call__(self, input_val):\n",
-    "        \"\"\" Main Convolutional LSTM \"\"\"\n",
+    "        \"\"\" pass input_val to the ConvLSTM and return last hidden layer.\n",
+    "        \n",
+    "        Args:\n",
+    "            input_val: input value of the ConvLSTM. 5D tensor\n",
+    "                [input dim, batch size, width, height, channel]\n",
+    "        \n",
+    "        Returns:\n",
+    "            h: last hidden states of the ConvLSTM.\n",
+    "        \"\"\"\n",
     "        c_prev = tf.zeros([BATCH_SIZE, 9, 8, self.h_dim])\n",
     "        h_prev = tf.zeros([BATCH_SIZE, 9, 8, self.h_dim])\n",
     "        \n",
@@ -639,7 +647,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
