--- a/Fine-Dust-Prediction.ipynb
+++ b/Fine-Dust-Prediction.ipynb
@@ -343,14 +343,14 @@
     "        return tf.nn.conv2d(x, w, strides=[1, 1, 1, 1], padding='SAME')\n",
     "    \n",
     "    def __call__(self, input_val):\n",
-    "        \"\"\" pass input_val to the ConvLSTM and return last hidden layer.\n",
+    "        \"\"\" Pass input_val to the ConvLSTM and return last hidden layer.\n",
     "        \n",
     "        Args:\n",
-    "            input_val: input value of the ConvLSTM. 5D tensor\n",
+    "            input_val (tf.Tensor): Input value of the ConvLSTM. 5D tensor\n",
     "                [input dim, batch size, width, height, channel]\n",
     "        \n",
     "        Returns:\n",
-    "            h: last hidden states of the ConvLSTM.\n",
+    "            h (tf.Tensor): Last hidden states of the ConvLSTM.\n",
     "        \"\"\"\n",
     "        c_prev = tf.zeros([BATCH_SIZE, 9, 8, self.h_dim])\n",
     "        h_prev = tf.zeros([BATCH_SIZE, 9, 8, self.h_dim])\n",
@@ -400,8 +400,8 @@
     "Wf = tf.get_variable('wf', shape=[1, 1, 32, 1],\n",
     "                    initializer=tf.random_normal_initializer(stddev=0.02))\n",
     "out = tf.nn.conv2d(hidden, Wf, strides=[1, 1, 1, 1], padding='SAME')\n",
-    "pred = tf.reshape(out, [-1, 9, 8])\n",
     "\n",
+    "pred = tf.reshape(out, [-1, 9, 8])\n",
     "\n",
     "loss = tf.reduce_mean(tf.square(Y - pred)) # MSE loss\n",
     "opt = tf.train.AdamOptimizer(0.01).minimize(loss)"
