Add more comments

--- a/Fine-Dust-Forecaster.ipynb
+++ b/Fine-Dust-Forecaster.ipynb
@@ -390,6 +390,7 @@
     "cell2 = ConvLSTMCell([9, 8], [5, 5], 64, name='encoder2')\n",
     "cell3 = ConvLSTMCell([9, 8], [5, 5], 64, name='encoder3')\n",
     "\n",
+    "# time_major option prevent `dynamic_rnn` from transposing the state tensor of ConvLSTM Cell.\n",
     "h1, state1 = tf.nn.dynamic_rnn(cell1, Xt, dtype=tf.float32, time_major=True)\n",
     "h2, state2 = tf.nn.dynamic_rnn(cell2, h1, dtype=tf.float32, time_major=True)\n",
     "h3, state3 = tf.nn.dynamic_rnn(cell3, h2, dtype=tf.float32, time_major=True)"
@@ -405,10 +406,12 @@
    },
    "outputs": [],
    "source": [
+    "# `sample` function prevent `dynamic_decode` from raising 'invalid tensor shape err'\n",
     "def sample(time, outputs, name=None, **unused_kwargs):\n",
     "    return tf.zeros([BATCH_SIZE])\n",
     "\n",
-    "helper1 = tf.contrib.seq2seq.TrainingHelper(tf.zeros_like(Xt), [WEEKLY_BATCH]*BATCH_SIZE, time_major=True)\n",
+    "init = tf.zeros_like(Xt)\n",
+    "helper1 = tf.contrib.seq2seq.TrainingHelper(init, [WEEKLY_BATCH]*BATCH_SIZE, time_major=True)\n",
     "helper1.sample = sample\n",
     "dcell1 = ConvLSTMCell([9, 8], [5, 5], 128, name='decoder1')\n",
     "dec1 = tf.contrib.seq2seq.BasicDecoder(dcell1, helper1, state1)\n",
@@ -691,7 +694,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
